app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
    background: black;
    margin: 0;
    color: white;
    user-select: none;
}

::-webkit-scrollbar {
    width: 12px;
  }

  ::-webkit-scrollbar-thumb {
    background-color: #4a4a4a;
    border-radius: 6px;
  }

  ::-webkit-scrollbar-track {
    background-color: #2d2d2d;
  }

  * {
    scrollbar-color: #4a4a4a #2d2d2d;
    scrollbar-width: thin;
  }

  ::-webkit-scrollbar-thumb:hover {
    background-color: #555;
  }

